--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 __pycache__/Army.cpython-36.pyc
+src/__pycache__/Weapon.cpython-36.pyc
+src/__pycache__/Army.cpython-36.pyc
+src/__pycache__/Equipment.cpython-36.pyc
+src/__pycache__/Soldier.cpython-36.pyc
