correct some mistakes

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ src/__pycache__/Weapon.cpython-36.pyc
 src/__pycache__/Army.cpython-36.pyc
 src/__pycache__/Equipment.cpython-36.pyc
 src/__pycache__/Soldier.cpython-36.pyc
+src/__pycache__/Infrastructure.cpython-36.pyc
+.vscode/settings.json
